# 3DBuilderStudio

./: BOUNDARIES.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  LICENSING.md  README.md  UPSTREAM.md  build_release_macos.sh  generate_fixtures.py  version.inc
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
docs/baseline/: README.md
scripts/: README.md  entitlements.plist  notarize_mac.sh  run_fuzz.sh  setup_deps_mac.sh  setup_deps_win.bat  sign_mac.sh  verify.sh
src/: CMakeLists.txt  OrcaSlicer.cpp  OrcaSlicer_app_msvc.cpp
src/dev-utils/: BaseException.cpp  OrcaSlicer_profile_validator.cpp
src/libslic3r/: AppConfig.cpp  Brim.cpp  BuildVolume.cpp  Color.hpp  Config.cpp  Config.hpp  ExtrusionEntity.cpp  ExtrusionEntity.hpp  FlushVolCalc.cpp  GCode.cpp  GCode.hpp  GCodeWriter.cpp  GCodeWriter.hpp  Geometry.cpp  Geometry.hpp  MeshBoolean.cpp  MeshBoolean.hpp  Model.cpp  Model.hpp  MultiPoint.cpp  MultiPoint.hpp  NSVGUtils.cpp  PerimeterGenerator.cpp  PlaceholderParser.cpp  Platform.cpp  Preset.cpp  Preset.hpp  PresetBundle.cpp  PresetBundle.hpp  Print.cpp  Print.hpp  PrintApply.cpp  PrintBase.cpp  PrintConfig.cpp  PrintConfig.hpp  PrintObject.cpp  Slicing.cpp  Slicing.hpp  SlicingAdaptive.cpp  Thread.cpp  (+10 more)
src/libslic3r/Arachne/: WallToolPaths.cpp
src/libslic3r/Fill/: Fill.cpp  Fill3DHoneycomb.cpp  FillAdaptive.cpp  FillBase.cpp  FillBase.hpp  FillCrossHatch.cpp  FillPlanePath.cpp  FillRectilinear.cpp  FillRectilinear.hpp
src/libslic3r/Format/: 3mf.cpp  AMF.cpp  SL1.cpp  bbs_3mf.cpp  bbs_3mf.hpp
src/libslic3r/GCode/: AdaptivePAInterpolator.cpp  AdaptivePAProcessor.cpp  ConflictChecker.cpp  CoolingBuffer.cpp  ExtrusionProcessor.hpp  FanMover.cpp  GCodeProcessor.cpp  GCodeProcessor.hpp  PchipInterpolatorHelper.cpp  PressureEqualizer.cpp  PressureEqualizer.hpp  SeamPlacer.cpp  SpiralVase.cpp  Thumbnails.cpp  TimelapsePosPicker.cpp  WipeTower.cpp  WipeTower.hpp  WipeTower2.cpp  WipeTower2.hpp
src/libslic3r/Support/: SupportCommon.cpp  SupportMaterial.cpp  SupportParameters.hpp  TreeSupport.cpp  TreeSupport3D.cpp  TreeSupportCommon.hpp
src/libvgcode/include/: PathVertex.hpp  Types.hpp  Viewer.hpp
src/libvgcode/src/: Shaders.hpp  ViewerImpl.cpp  ViewerImpl.hpp
src/slic3r/: CMakeLists.txt
src/slic3r/Config/: Snapshot.cpp
src/slic3r/GUI/: 2DBed.cpp  3DBed.cpp  3DBed.hpp  3DScene.cpp  AMSMaterialsSetting.cpp  AMSSetting.cpp  AboutDialog.cpp  AmsMappingPopup.cpp  Auxiliary.cpp  Auxiliary.hpp  BBLTopbar.cpp  BackgroundSlicingProcess.cpp  BedShapeDialog.cpp  BindDialog.cpp  BitmapCache.cpp  CalibrationPanel.cpp  CalibrationWizardPage.cpp  CalibrationWizardPresetPage.cpp  CalibrationWizardStartPage.cpp  CameraPopup.cpp  CapsuleButton.cpp  ConfigManipulation.cpp  ConfigWizard.cpp  ConnectPrinter.cpp  CreatePresetsDialog.cpp  DailyTips.cpp  DesktopIntegrationDialog.cpp  DeviceErrorDialog.cpp  DeviceManager.cpp  DownloadProgressDialog.cpp  Downloader.cpp  DownloaderFileGet.cpp  DragCanvas.cpp  EditGCodeDialog.cpp  ExportPresetBundleDialog.cpp  Field.cpp  FilamentGroupPopup.cpp  FilamentMapPanel.cpp  (+90 more)
tests/: CMakeLists.txt
tests/fixtures/: bad_count.stl  cube_10mm.3mf  cube_10mm.stl  cube_10mm_ascii.stl  cube_bambu_extensions.3mf  truncated.3mf
tests/fuzz/: CMakeLists.txt  fuzz_3mf.cpp  fuzz_obj.cpp  fuzz_stl.cpp
tests/unit/: CMakeLists.txt  test_3mf_export.cpp  test_boolean_intersect.cpp  test_boolean_subtract.cpp  test_boolean_subtract_ui.cpp  test_boolean_union.cpp  test_build_sanity.cpp  test_calibration_removed.cpp  test_fileio_robustness.cpp  test_measure_gizmo.cpp  test_memory_stress.cpp  test_network_stub.cpp  test_no_profiles.cpp  test_obj_robustness.cpp  test_plane_cut.cpp  test_primitive_cone.cpp  test_primitive_cube.cpp  test_primitive_cylinder.cpp  test_primitive_sphere.cpp  test_settle.cpp  test_sidebar_objectlist.cpp  test_slicing_disabled.cpp  test_stl_export.cpp  test_transform_free_z.cpp  test_ui_tabs.cpp  test_undo_redo_baseline.cpp
(+71 files in other folders)
